fix times up display on mobile

--- a/frontend/src/styles/grids.scss
+++ b/frontend/src/styles/grids.scss
@@ -108,6 +108,8 @@
             font-weight: 500;
             @media screen and (max-width: 430px) {
               padding: 5px;
+              text-wrap: nowrap;
+              width: fit-content;
             }
           }
         }
